[gd_scene load_steps=15 format=3 uid="uid://dw75vhhygaute"]

[ext_resource type="Script" path="res://BestTimeCredits.gd" id="1_hvbqx"]
[ext_resource type="Texture2D" uid="uid://cvmhbfhiencvt" path="res://Assets/space1.png" id="2_wxc8i"]
[ext_resource type="FontFile" uid="uid://6ev5nblcm8oc" path="res://kongtext.ttf" id="3_stqhf"]
[ext_resource type="AudioStream" uid="uid://6kvy7v1urssj" path="res://Music & Sound/Music/Bubble Balls - Not the end.wav" id="4_qd5uo"]
[ext_resource type="AudioStream" uid="uid://bnqdkect4b107" path="res://Music & Sound/SFX/BB SFX - Select.wav" id="5_1fsvb"]
[ext_resource type="AudioStream" uid="uid://8i7id1ukvkv8" path="res://Music & Sound/SFX/BB SFX - Select2.wav" id="6_a0dpu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_evvqq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_48pa5"]
content_margin_bottom = 30.0
bg_color = Color(0.313726, 0.65098, 0.772549, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hytej"]
content_margin_bottom = 30.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u1bis"]
content_margin_bottom = 25.0
bg_color = Color(0.313726, 0.607843, 0.960784, 0)

[sub_resource type="Theme" id="Theme_p52fh"]
Button/colors/font_hover_color = Color(0.631373, 0.94902, 0.94902, 1)
Button/colors/font_pressed_color = Color(0.188235, 0.584314, 1, 1)
Button/font_sizes/font_size = 48
Button/fonts/font = ExtResource("3_stqhf")
Button/styles/focus = SubResource("StyleBoxEmpty_evvqq")
Button/styles/hover = SubResource("StyleBoxFlat_48pa5")
Button/styles/normal = SubResource("StyleBoxFlat_hytej")
Button/styles/pressed = SubResource("StyleBoxFlat_u1bis")

[sub_resource type="LabelSettings" id="LabelSettings_iefvy"]
font = ExtResource("3_stqhf")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_8nsk7"]
font = ExtResource("3_stqhf")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_28s0e"]
font = ExtResource("3_stqhf")
font_size = 48

[node name="BestTimeCredits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hvbqx")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.788235, 0.392157, 0.545098, 1)
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.643137, 0.662745, 0.831373, 1)
texture_filter = 1
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_wxc8i")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -336.0
offset_top = -352.0
offset_right = 336.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_p52fh")
metadata/_edit_group_ = true

[node name="ReturnButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Return to Menu"

[node name="SpeedrunTimer" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -97.0
offset_top = 176.0
offset_right = 327.0
offset_bottom = 324.0
grow_horizontal = 2
pivot_offset = Vector2(212, 74)

[node name="Minutes" type="Label" parent="SpeedrunTimer"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -27.0
offset_right = 73.0
offset_bottom = 27.0
grow_vertical = 2
text = "00:"
label_settings = SubResource("LabelSettings_iefvy")
horizontal_alignment = 2

[node name="TimeText" type="Label" parent="SpeedrunTimer"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -238.0
offset_top = -26.0
offset_right = 50.0
offset_bottom = 28.0
grow_vertical = 2
text = "Time: "
label_settings = SubResource("LabelSettings_iefvy")
horizontal_alignment = 2

[node name="Seconds" type="Label" parent="SpeedrunTimer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.5
offset_top = -27.0
offset_right = 38.5
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
text = "00:"
label_settings = SubResource("LabelSettings_8nsk7")
horizontal_alignment = 2

[node name="Milliseconds" type="Label" parent="SpeedrunTimer"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -28.0
offset_bottom = 26.0
grow_horizontal = 0
grow_vertical = 2
text = "00"
label_settings = SubResource("LabelSettings_28s0e")
horizontal_alignment = 2

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_qd5uo")
autoplay = true

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_1fsvb")
volume_db = -2.0

[node name="Return" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_a0dpu")
volume_db = -2.0

[connection signal="mouse_entered" from="VBoxContainer/ReturnButton" to="." method="_on_return_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
